Check accessibilty with screen reader; fix uneven article card width at large tablet screen size

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ x
   }
 
   .article-txt-section {
-    padding-left: 2rem;
+    padding: 0 2rem;
   }
 }
 
